# lth_thesis

./: .gitignore  Bao_cao_TLKH.fdb_latexmk  Bao_cao_TLKH.fls  README.md  RESULTS_FORMAT.md  SCHEDULE.md  earlybird_code_explanation.md  grasp_code_explanation.md  hybrid_code_explanation.md  hybrid_improve_code_explanation.md  pyproject.toml  synflow_code_explanation.md
Khoá_luận_tốt_nghiệp/: Bao_cao_TLKH.acn  Bao_cao_TLKH.acr  Bao_cao_TLKH.alg  Bao_cao_TLKH.aux  Bao_cao_TLKH.bbl  Bao_cao_TLKH.ist  Bao_cao_TLKH.loa  Bao_cao_TLKH.lof  Bao_cao_TLKH.nlo  Bao_cao_TLKH.tex  Bao_cao_TLKH.toc  Bao_cao_TLKH.xdv  husthesis.sty  refs.bib  slides.nav  slides.snm  slides.tex  slides.xdv
Khoá_luận_tốt_nghiệp/chapters/: __latexindent_temp_methodology.tex  background&literature-review.tex  conclusion.tex  contribution.tex  discussion.tex  experimental-setup.tex  introduction.tex  methodology.tex  results&analysis.tex
configs/: experiment.yaml
notebooks/: early-bird.ipynb  ga.ipynb  grasp.ipynb  hybrid.ipynb  hybrid_improve.ipynb  imp.ipynb  results.ipynb  synflow.ipynb
results/: all_results_raw_urls.txt
results/dense/dense_resnet20_cifar10/: final_model.pt  results.json  summary.csv
results/imp/: aggregated_results.json
src/: data.py  earlybird.py  experiments.py  ga.py  grasp.py  hybrid.py  hybrid_improve.py  hybrid_improve_impl.py  metrics.py  model.py  pruning.py  synflow.py  train.py  util.py
tests/: test_earlybird.py  test_flops.py  test_hybrid_behavior.py  test_imp.py  test_imp_behavior.py  test_recompute_dense_accuracy.py  test_synflow_behavior.py
(+599 files in other folders)
