[project]
name = "lth"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = "truongquocanh_t67@hus.edu.vn"},
]
dependencies = ["torch>=2.9.1", "torchvision>=0.24.1", "wandb>=0.23.1"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
